# wurm

./: .coveragerc  .gitignore  LICENSE-MIT  README.rst  pyproject.toml  setup.py  tox.ini
docs/source/: conf.py  getting-started.rst  getting_started.py  index.rst  wurm.rst
tests/: test_relations.py  test_wurm.py
wurm/: __init__.py  connection.py  queries.py  sql.py  tables.py  typemaps.py
