[metadata]
name = 'wurm'
version = '0.0.1'
description = ''
author = 'Jasmijn Wellner'
author_email = 'gyvox.public@gmail.com'
license = 'MIT'
url = 'https://github.com/gvx/wurm'

[requires]
python_version = ['3.7', '3.8', '3.9']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
